--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
+        android:background="#000000"
         android:layout_height="match_parent">
 
         <ImageView
