--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="test.suntabu.com.rtsanimationtest.MainActivity">
-
-    <TextView
+    <EditText
+        android:id="@+id/et_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="NUM"/>
+    <Button
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="Hello World!" />
 
     <FrameLayout
